# squarequant-package

./: .gitignore  .readthedocs.yaml  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.md  requirements.txt
examples/: avgdd_test.py  basic_usage.py  calmar_test.py  cdar_test.py  cvar_test.py  erm_test.py  evar_test.py  mad_test.py  mdd_test.py  montecarlo_test.py  semidev_test.py  sharpe_test.py  sortino_test.py  ulcer_test.py  var_test.py  volatility_test.py
squarequant/: __init__.py  api.py
squarequant.egg-info/: PKG-INFO
squarequant/core/: __init__.py  base.py
squarequant/data/: __init__.py  data.py
squarequant/monte_carlo/: __init__.py  montecarlo.py
squarequant/utils/: __init__.py  helpers.py
squarequant/var/: valueatrisk.py
